foundation-objs/main/default/objects/Opportunity/fields/AcceptQuoteWithLineSyncedBE__c.field-meta.xml
<CustomField>
    <fullName>AcceptQuoteWithLineSyncedBE__c</fullName>
    <label>AcceptQuoteWithLineSyncedBE</label>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Quote Accept</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.Is_Primary_Quote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>