foundation-objs/main/default/objects/Opportunity/fields/Account_Owner_Manger__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manger__c</fullName>
    <formula>Account.Account_Owner_Manager__c</formula>
    <label>Account Owner: Manger</label>
    <type>Text</type>
</CustomField>