foundation-objs/main/default/objects/Opportunity/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Billing Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>