foundation-objs/main/default/objects/Opportunity/fields/Adoption_Risks_or_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Risks_or_Blockers__c</fullName>
    <label>Adoption Risks or Blockers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>