foundation-objs/main/default/objects/Opportunity/fields/Age_since_last_stage_chainge_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_since_last_stage_chainge_Days__c</fullName>
    <formula>TODAY() - Last_Opportunity_Stage_Update_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age since last stage chainge(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>