foundation-objs/main/default/objects/Opportunity/fields/Age_since_Quote_Created__c.field-meta.xml
<CustomField>
    <fullName>Age_since_Quote_Created__c</fullName>
    <formula>TODAY()-  DATEVALUE(SyncedQuote.CreatedDate)</formula>
    <label>Age since Quote Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>