foundation-objs/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( Record_Type_cumulated__c = &apos;Upsell_Topup&apos;, Upsell_Amount__c,IF((Record_Type_cumulated__c = &apos;Net_New_ID&apos; || ISPICKVAL(ClearTax_Billing_Entity__c,&apos;Xpedize&apos;)) &amp;&amp;
!ISPICKVAL(Xpedize_Product_Type__c, &apos;KYC APIs&apos;), Forecast_Amount__c,
IF(NOT(ISBLANK(SyncedQuoteId)) , Actual_Amount__c  ,  Forecast_Amount__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>