foundation-objs/main/default/objects/Opportunity/fields/Anchor_Company__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Company__c</fullName>
    <label>Anchor Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>