foundation-objs/main/default/objects/Opportunity/fields/Anchor_Companys__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Companys__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anchor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>AnchorChildOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>