foundation-objs/main/default/objects/Opportunity/fields/ARR_Multiyear_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>ARR_Multiyear_Adjusted__c</fullName>
    <formula>IF( Period_Years_Rounded__c &lt;1.5, Opportunity_Category_Value__c , Opportunity_Category_Value__c /Period_Years_Rounded__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR(Multiyear Adjusted)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>