foundation-objs/main/default/objects/Opportunity/fields/ARR_OTP_Multiyear_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>ARR_OTP_Multiyear_Adjusted__c</fullName>
    <formula>IF( Period_Years_Rounded__c &lt;1.5, Opportunity_Category_Value_ARR_OTP__c ,((ARR_Product_Total_Amount__c/ Period_Years_Rounded__c)+ OTP_Product_Total_Amount__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR+OTP(Multiyear Adjusted))</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>