foundation-objs/main/default/objects/Opportunity/fields/ARR_OTP_Multiyear_Adjusted_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>ARR_OTP_Multiyear_Adjusted_Lakhs__c</fullName>
    <formula>ARR_OTP_Multiyear_Adjusted__c /100000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR+OTP(Multiyear Adjusted)(Lakhs)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>