foundation-objs/main/default/objects/Opportunity/fields/ARR_Product_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Product_Total_Amount__c</fullName>
    <label>ARR Product Total Amount</label>
    <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Billing_Type__c</field>
        <operation>equals</operation>
        <value>ARR</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>