foundation-objs/main/default/objects/Opportunity/fields/Asset_lookup__c.field-meta.xml
<CustomField>
    <fullName>Asset_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset lookup</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Asset_lookup</relationshipName>
    <type>Lookup</type>
</CustomField>