foundation-objs/main/default/objects/Opportunity/fields/Billing_F__c.field-meta.xml
<CustomField>
    <fullName>Billing_F__c</fullName>
    <label>Billing Frequency for Subscription Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Half-yearly in advance</fullName>
            </value>
            <value>
                <fullName>Monthly in advance</fullName>
            </value>
            <value>
                <fullName>Quarterly in advance</fullName>
            </value>
            <value>
                <fullName>Annual in advance</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Half-yearly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>100% payment upon signing Order Form</fullName>
            </value>
            <value>
                <fullName>Half-yearly in end (Approval Driven)</fullName>
                <isActive>false</isActive>
                <label>Half-yearly in end (Approval Driven)</label>
            </value>
            <value>
                <fullName>Monthly in end (Approval Driven)</fullName>
                <isActive>false</isActive>
                <label>Monthly in end (Approval Driven)</label>
            </value>
            <value>
                <fullName>Quarterly in end (Approval Driven)</fullName>
                <isActive>false</isActive>
                <label>Quarterly in end (Approval Driven)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>