foundation-objs/main/default/objects/Opportunity/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency for Service Fee (OTP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Upon signing Order form</fullName>
            </value>
            <value>
                <fullName>50% upon signing the Order form &amp; 50% after delivery</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>50% upon signing the Order Form and 50% post UAT completion</fullName>
            </value>
            <value>
                <fullName>80% on signing the order form and 20% post go-live</fullName>
                <isActive>false</isActive>
                <label>80% on signing the order form and 20% post go-live</label>
            </value>
            <value>
                <fullName>Integration</fullName>
                <isActive>false</isActive>
                <label>Integration</label>
            </value>
            <value>
                <fullName>Quarterly in End (Approval Driven)</fullName>
                <isActive>false</isActive>
                <label>Quarterly in End (Approval Driven)</label>
            </value>
            <value>
                <fullName>Quarterly in advance</fullName>
                <isActive>false</isActive>
                <label>Quarterly in advance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>