foundation-objs/main/default/objects/Opportunity/fields/Billing_Frequency_for_Integration_Prods__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_for_Integration_Prods__c</fullName>
    <label>Billing Freq. - Integration/Digitization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Upon signing Order form</fullName>
            </value>
            <value>
                <fullName>50% Upon signing Order form &amp; 50% upon Go live</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>50% on signing of this order form, 50% post UAT completion</fullName>
            </value>
            <value>
                <fullName>100% upfront basis Integration Project start date</fullName>
            </value>
            <value>
                <fullName>50% upfront basis Integration Project start date &amp; 50% upon Go live</fullName>
            </value>
            <value>
                <fullName>50% Upon signing order form and 50% upon work completion</fullName>
            </value>
            <value>
                <fullName>50% upon signing the Order Form and 50% post UAT completion</fullName>
            </value>
            <value>
                <fullName>50% Upfront basis Integration start date &amp; 50% upon UAT Handover</fullName>
            </value>
            <value>
                <fullName>50% Upon signing Order form &amp; 50% upon UAT</fullName>
            </value>
            <value>
                <fullName>50% Go Live</fullName>
                <isActive>false</isActive>
                <label>50% Go Live</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <isActive>false</isActive>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>