foundation-objs/main/default/objects/Opportunity/fields/Billing_GST__c.field-meta.xml
<CustomField>
    <fullName>Billing_GST__c</fullName>
    <label>Billing GSTIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>