foundation-objs/main/default/objects/Opportunity/fields/Bucketed_Record_Type_C__c.field-meta.xml
<CustomField>
    <fullName>Bucketed_Record_Type_C__c</fullName>
    <formula>IF(OR(RecordType.Name=&quot;Net New&quot;,RecordType.Name=&quot;Channel Partner&quot;,RecordType.Name=&quot;Partner Success&quot;),&quot;New&quot;,IF(RecordType.Name=&quot;Cross Sell/Upsell&quot;,&quot;Cross-sell&quot;,&quot;N/A&quot;))</formula>
    <label>Bucketed Record Type(C)</label>
    <type>Text</type>
</CustomField>