foundation-objs/main/default/objects/Opportunity/fields/Budget_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Budget_approval_status__c</fullName>
    <label>Budget approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cannot afford</fullName>
            </value>
            <value>
                <fullName>Pending - Meeting completed</fullName>
            </value>
            <value>
                <fullName>Pending - Meeting pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>