foundation-objs/main/default/objects/Opportunity/fields/Budget_Approver__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Budget Approver)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>