foundation-objs/main/default/objects/Opportunity/fields/Bus_POC__c.field-meta.xml
<CustomField>
    <fullName>Bus_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business POC</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Is_Communicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bus POC)</relationshipLabel>
    <relationshipName>Opportunitie_BusPOC</relationshipName>
    <type>Lookup</type>
</CustomField>