foundation-objs/main/default/objects/Opportunity/fields/Business_metrics_from_buying_CT_products__c.field-meta.xml
<CustomField>
    <fullName>Business_metrics_from_buying_CT_products__c</fullName>
    <label>Relevant business metrics CT solves for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Team Productivity</fullName>
            </value>
            <value>
                <fullName>Cost savings</fullName>
            </value>
            <value>
                <fullName>Accuracy</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>