foundation-objs/main/default/objects/Opportunity/fields/Business_POC_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_POC_Contact_Number__c</fullName>
    <label>Business POC Contact Number</label>
    <type>Phone</type>
</CustomField>