foundation-objs/main/default/objects/Opportunity/fields/Business_POC_Designation__c.field-meta.xml
<CustomField>
    <fullName>Business_POC_Designation__c</fullName>
    <label>Business POC Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>