foundation-objs/main/default/objects/Opportunity/fields/Business_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_POC_Email__c</fullName>
    <label>Business POC Email</label>
    <type>Email</type>
</CustomField>