foundation-objs/main/default/objects/Opportunity/fields/Business_POC_email_N__c.field-meta.xml
<CustomField>
    <fullName>Business_POC_email_N__c</fullName>
    <formula>Bus_POC__r.Email</formula>
    <label>Business POC_Email(N)</label>
    <type>Text</type>
</CustomField>