foundation-objs/main/default/objects/Opportunity/fields/Business_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_POC_Name__c</fullName>
    <label>Business POC Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>