foundation-objs/main/default/objects/Opportunity/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>