foundation-objs/main/default/objects/Opportunity/fields/Calling_Comments__c.field-meta.xml
<CustomField>
    <fullName>Calling_Comments__c</fullName>
    <label>SDR / GCC Calling comments</label>
    <type>TextArea</type>
</CustomField>