foundation-objs/main/default/objects/Opportunity/fields/Channel_Head__c.field-meta.xml
<CustomField>
    <fullName>Channel_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>