foundation-objs/main/default/objects/Opportunity/fields/Churned_Winback_Deal__c.field-meta.xml
<CustomField>
    <fullName>Churned_Winback_Deal__c</fullName>
    <label>Churned : Winback Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>