foundation-objs/main/default/objects/Opportunity/fields/City_2__c.field-meta.xml
<CustomField>
    <fullName>City_2__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>