foundation-objs/main/default/objects/Opportunity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Opportunities_City</relationshipLabel>
    <relationshipName>Opportunities_City</relationshipName>
    <type>Lookup</type>
</CustomField>