foundation-objs/main/default/objects/Opportunity/fields/Clear_LT_RH_discussion_status__c.field-meta.xml
<CustomField>
    <fullName>Clear_LT_RH_discussion_status__c</fullName>
    <label>Clear LT / RH discussion status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed and aligned</fullName>
            </value>
            <value>
                <fullName>Completed but awaiting response</fullName>
            </value>
            <value>
                <fullName>Completed and customer not interested</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>