foundation-objs/main/default/objects/Opportunity/fields/ClearTax_Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>ClearTax_Billing_Entity__c</fullName>
    <label>ClearTax Billing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defmacro</fullName>
            </value>
            <value>
                <fullName>Xpedize</fullName>
            </value>
            <value>
                <fullName>CimplyFive</fullName>
            </value>
            <value>
                <fullName>ClearSharp</fullName>
                <isActive>false</isActive>
                <label>ClearSharp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>