foundation-objs/main/default/objects/Opportunity/fields/Closure_Velocity_From_SQL__c.field-meta.xml
<CustomField>
    <fullName>Closure_Velocity_From_SQL__c</fullName>
    <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
    <label>Closure Velocity (From SQL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>