foundation-objs/main/default/objects/Opportunity/fields/Company_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain_Name__c</fullName>
    <inlineHelpText>(e.g : xyz.in, abc.com or characters after ‘@’ in mail id) and If no domain name , please enter &apos;NA&apos;</inlineHelpText>
    <label>Company Domain Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>