foundation-objs/main/default/objects/Opportunity/fields/Company_Secretary__c.field-meta.xml
<CustomField>
    <fullName>Company_Secretary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Secretary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Company Secretary)</relationshipLabel>
    <relationshipName>Company_Secretary</relationshipName>
    <type>Lookup</type>
</CustomField>