foundation-objs/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <label>Compelling Event</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>