foundation-objs/main/default/objects/Opportunity/fields/competition_Currently_Using__c.field-meta.xml
<CustomField>
    <fullName>competition_Currently_Using__c</fullName>
    <label>Competition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competition_currently_using</valueSetName>
    </valueSet>
</CustomField>