foundation-objs/main/default/objects/Opportunity/fields/Competition_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Competition_Renewal_Date__c</fullName>
    <inlineHelpText>Enter the tentative renewal date of the current competitor product in use</inlineHelpText>
    <label>Competition Renewal Date</label>
    <type>Date</type>
</CustomField>