foundation-objs/main/default/objects/Opportunity/fields/Competitor_others__c.field-meta.xml
<CustomField>
    <fullName>Competitor_others__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>Competitor - others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>