foundation-objs/main/default/objects/Opportunity/fields/Competitor_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Pricing__c</fullName>
    <label>Competitor Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>