foundation-objs/main/default/objects/Opportunity/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <formula>TEXT(Account.Country_of_Origin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Origin</label>
    <type>Text</type>
</CustomField>