foundation-objs/main/default/objects/Opportunity/fields/cr_number_gcc__c.field-meta.xml
<CustomField>
    <fullName>cr_number_gcc__c</fullName>
    <label>CR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>