foundation-objs/main/default/objects/Opportunity/fields/Cross_Sell_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Comments__c</fullName>
    <label>Cross Sell Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>