foundation-objs/main/default/objects/Opportunity/fields/Cross_Sell_Products_to_be_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Products_to_be_Pitched__c</fullName>
    <label>Cross Sell Products to be Pitched</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>