foundation-objs/main/default/objects/Opportunity/fields/CS_priority__c.field-meta.xml
<CustomField>
    <fullName>CS_priority__c</fullName>
    <label>CS_priority</label>
    <length>18</length>
    <type>Text</type>
</CustomField>