foundation-objs/main/default/objects/Opportunity/fields/Currency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Currency_Formula__c</fullName>
    <formula>TEXT( Account.CurrencyIsoCode )</formula>
    <label>Currency(Formula)</label>
    <type>Text</type>
</CustomField>