foundation-objs/main/default/objects/Opportunity/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName != &apos;International&apos; , &apos;INR&apos;,&apos;USD&apos;)</defaultValue>
    <label>Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>