foundation-objs/main/default/objects/Opportunity/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current</label>
    <type>Date</type>
</CustomField>