foundation-objs/main/default/objects/Opportunity/fields/Current_process_of_the_client__c.field-meta.xml
<CustomField>
    <fullName>Current_process_of_the_client__c</fullName>
    <label>Current process of the client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST Compliance - Manual</fullName>
            </value>
            <value>
                <fullName>GST Compliance - Automated</fullName>
            </value>
            <value>
                <fullName>Sales data prepared directly from ERP</fullName>
                <label>GST - Sales data prepared directly from ERP</label>
            </value>
            <value>
                <fullName>E-Invoice (draft G1) vs Sales Register reconciliation via Excel</fullName>
            </value>
            <value>
                <fullName>E-Invoice (draft G1) vs Sales Register reconciliation via Tool</fullName>
            </value>
            <value>
                <fullName>Less than 80% ITC matching without manual effort</fullName>
                <label>Max - Less than 80% ITC matching without manual effort</label>
            </value>
            <value>
                <fullName>Non Compliant vendor communication - One way tool</fullName>
                <label>Max/GST - Non Compliant vendor communication - One way tool</label>
            </value>
            <value>
                <fullName>Non Compliant vendor communication - Two way tool</fullName>
                <label>Max- Non Compliant vendor communication - Two way tool</label>
            </value>
            <value>
                <fullName>Non Compliant vendor communication - Manually</fullName>
                <label>Max/GST- Non Compliant vendor communication - Manually</label>
            </value>
            <value>
                <fullName>Non Compliant vendor - Automated blocking</fullName>
                <label>Max- Non Compliant vendor - Automated blocking</label>
            </value>
            <value>
                <fullName>Recent uptick in number of notices recieved</fullName>
                <label>Notice- Recent uptick in number of notices recieved</label>
            </value>
            <value>
                <fullName>ID : Avg. Credit Period while Purchasing &gt;30 days</fullName>
            </value>
            <value>
                <fullName>TDS : 26AS recon through tool</fullName>
            </value>
            <value>
                <fullName>TDS - Consultant</fullName>
            </value>
            <value>
                <fullName>TDS - Tool</fullName>
            </value>
            <value>
                <fullName>TDS - Inhouse (Gov utility)</fullName>
            </value>
            <value>
                <fullName>CA led</fullName>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>