foundation-objs/main/default/objects/Opportunity/fields/Current_spends__c.field-meta.xml
<CustomField>
    <fullName>Current_spends__c</fullName>
    <label>Current customer spends for this usecase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>