foundation-objs/main/default/objects/Opportunity/fields/Custom_Billing_Freq_for_Integration_Prod__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing_Freq_for_Integration_Prod__c</fullName>
    <label>Custom Billing Freq for Integration Prod</label>
    <length>250</length>
    <type>Text</type>
</CustomField>