foundation-objs/main/default/objects/Opportunity/fields/Customer_Billing_Name_as_Per_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Name_as_Per_PO__c</fullName>
    <label>Customer Billing Name as Per PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>